--- a/.eslintrc
+++ b/.eslintrc
@@ -5,8 +5,10 @@
     "react",
   ],
   "rules": {
+    "class-methods-use-this": [0],
   },
   "globals": {
-    "document": true
+    "document": true,
+    "window": true
   }
 }
