--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "private": true,
   "author": "Jasper Kuperus",
   "dependencies": {
+    "classnames": "^2.2.5",
+    "lodash": "^4.17.4",
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   },
